<resources>
    <string name="app_name">Calculator</string>
    <string name="_10_10">10+10</string>
    <string name="_20">20</string>
    <string name="brackets_l">(</string>
    <string name="brackets_r">)</string>
    <string name="percentage">%</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">_</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="clear">C</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="_2nd">2nd</string>
    <string name="deg">deg</string>
    <string name="sin">sin</string>
    <string name="degree">o</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="x_y">X^y</string>
    <string name="lg">lg</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="mod">mod</string>
    <string name="fact_x">X!</string>
    <string name="_1_x">1/x</string>
    <string name="e">e</string>
</resources>